Fixed the overflow of the tooltip text

--- a/topbar/src/styles/Downloads.module.css
+++ b/topbar/src/styles/Downloads.module.css
@@ -186,6 +186,7 @@
   height: 36px;
   border-radius: 6px;
   opacity: 0;
+  width: 100%;
   transform: translateY(10px);
   transition: all 0.3s ease-in-out;
 }
